--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-[#f5f5f5] text-gray-800 font-sans">
   <header class="bg-white shadow-md p-4">
-    <h1 class="text-xl font-bold text-center text-blue-600">Codashop ML Top Up</h1>
+    <h1 class="text-xl font-bold text-center text-blue-600"> ML Top Up </h1>
   </header>
   <main class="max-w-lg mx-auto mt-6 bg-white rounded-lg shadow p-6">
     <h2 class="text-lg font-semibold mb-4">Masukkan User ID</h2>
